Added 400 and 500 response code examples